This fixes #3730. Sets the z-index to lower than that of the menu to prevent overlapping.

--- a/public/less/_base.less
+++ b/public/less/_base.less
@@ -138,6 +138,10 @@ pre, code {
         user-select: auto;
     }
 
+    &.floating.label {
+        z-index: 10 !important;
+    }
+
     &.container {
         &.fluid {
             &.padded {
